--- a/pom.xml
+++ b/pom.xml
@@ -41,23 +41,24 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <curator.version>5.1.0</curator.version>
+        <curator.version>5.2.0</curator.version>
         <zookpeeper.version>3.6.2</zookpeeper.version>
-        <bookkeeper.version>4.12.0</bookkeeper.version>
-        <slf4j.version>1.7.29</slf4j.version>
-        <netty.version>4.1.51.Final</netty.version>
-        <netty.boringssl.version>2.0.34.Final</netty.boringssl.version>
-        <junit.version>4.13.1</junit.version>
+        <bookkeeper.version>4.14.4</bookkeeper.version>
+        <slf4j.version>1.7.32</slf4j.version>
+        <netty.version>4.1.72.Final</netty.version>
+        <netty.boringssl.version>2.0.46.Final</netty.boringssl.version>
+        <!-- IntelliJ workaround https://github.com/junit-team/junit5/issues/2198-->
+        <junit.version>4.13</junit.version>
         <mockito.version>1.10.19</mockito.version>
-        <jetty.version>9.4.33.v20201020</jetty.version>
-        <herddb.version>0.22.0</herddb.version>
+        <jetty.version>9.4.43.v20210629</jetty.version>
+        <herddb.version>0.24.0</herddb.version>
 
         <yarn.version>v1.21.1</yarn.version>
         <node.version>v15.2.1</node.version>
         <frontend.path>src/main/bvmui</frontend.path>
         <maven.frontend.plugin.version>1.12.0</maven.frontend.plugin.version>
 
-        <jersey.version>2.29</jersey.version>
+        <jersey.version>2.35</jersey.version>
         <libs.checkstyle>3.1.1</libs.checkstyle>
         <libs.spotbugs>4.1.4</libs.spotbugs>
         <eclipselink.version>2.7.5</eclipselink.version>
@@ -66,6 +67,11 @@
         <libs.jaxws.jaxb-api>2.3.1</libs.jaxws.jaxb-api>
         <libs.jaxws.jaxb-impl>2.3.2</libs.jaxws.jaxb-impl>
         <libs.javaxactivation.api>1.2.0</libs.javaxactivation.api>
+        <dependency-check-maven.version>6.1.6</dependency-check-maven.version>
+        <bc-fips.version>1.0.2.3</bc-fips.version>
+        <guava.version>31.0.1-jre</guava.version>
+        <protobuf-java.version>3.16.1</protobuf-java.version>
+        <kotlin-stdlib-jdk8.version>1.6.10</kotlin-stdlib-jdk8.version>
     </properties>
     <licenses>
         <license>
@@ -173,6 +179,11 @@
                 <version>${netty.boringssl.version}</version>
             </dependency>
             <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-transport-native-epoll</artifactId>
+                <version>${netty.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.curator</groupId>
                 <artifactId>curator-test</artifactId>
                 <version>${curator.version}</version>
@@ -214,6 +225,10 @@
                     <exclusion>
                         <groupId>org.apache.zookeeper</groupId>
                         <artifactId>*</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
@@ -262,6 +277,26 @@
                 <artifactId>mockito-all</artifactId>
                 <version>${mockito.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bc-fips</artifactId>
+                <version>${bc-fips.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${protobuf-java.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib-jdk8</artifactId>
+                <version>${kotlin-stdlib-jdk8.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
@@ -293,6 +328,27 @@
             </plugins>
         </pluginManagement>
         <plugins>
+            <plugin>
+                <groupId>org.commonjava.maven.plugins</groupId>
+                <artifactId>directory-maven-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                    <execution>
+                        <id>directories</id>
+                        <goals>
+                            <goal>directory-of</goal>
+                        </goals>
+                        <phase>initialize</phase>
+                        <configuration>
+                            <property>bkvm.basedir</property>
+                            <project>
+                                <groupId>org.bkvm</groupId>
+                                <artifactId>bkvm-parent</artifactId>
+                            </project>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
@@ -430,6 +486,59 @@
                 <module>site-skin</module>
                 <module>site</module>
             </modules>
+        </profile>
+        <profile>
+            <id>owasp-dependency-check</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.owasp</groupId>
+                        <artifactId>dependency-check-maven</artifactId>
+                        <version>${dependency-check-maven.version}</version>
+                        <configuration>
+                            <suppressionFiles>
+                                <suppressionFile>${bkvm.basedir}/owasp-suppressions.xml</suppressionFile>
+                            </suppressionFiles>
+
+                            <msbuildAnalyzerEnabled>false</msbuildAnalyzerEnabled>
+                            <nodeAnalyzerEnabled>false</nodeAnalyzerEnabled>
+                            <yarnAuditAnalyzerEnabled>false</yarnAuditAnalyzerEnabled>
+                            <pyDistributionAnalyzerEnabled>false</pyDistributionAnalyzerEnabled>
+                            <pyPackageAnalyzerEnabled>false</pyPackageAnalyzerEnabled>
+                            <pipAnalyzerEnabled>false</pipAnalyzerEnabled>
+                            <pipfileAnalyzerEnabled>false</pipfileAnalyzerEnabled>
+                            <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
+                            <msbuildAnalyzerEnabled>false</msbuildAnalyzerEnabled>
+                            <mixAuditAnalyzerEnabled>false</mixAuditAnalyzerEnabled>
+                            <nugetconfAnalyzerEnabled>false</nugetconfAnalyzerEnabled>
+                            <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>aggregate</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+            <reporting>
+                <plugins>
+                    <plugin>
+                        <groupId>org.owasp</groupId>
+                        <artifactId>dependency-check-maven</artifactId>
+                        <version>${dependency-check-maven.version}</version>
+                        <reportSets>
+                            <reportSet>
+                                <reports>
+                                    <report>aggregate</report>
+                                </reports>
+                            </reportSet>
+                        </reportSets>
+                    </plugin>
+                </plugins>
+            </reporting>
         </profile>
     </profiles>
     <repositories>
