--- a/web/src/main/bvmui/package.json
+++ b/web/src/main/bvmui/package.json
@@ -5,48 +5,49 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test": "vue-cli-service test:unit -i",
-    "lint": "vue-cli-service lint --no-fix"
+    "lint": "vue-cli-service lint --no-fix",
+    "test": "vue-cli-service test:unit -i"
   },
   "dependencies": {
-    "axios": "0.21.0",
-    "query-string": "6.13.7",
-    "vue": "2.6.12",
+    "axios": "0.26.1",
+    "query-string": "7.1.1",
+    "vue": "2.6.14",
     "vue-router": "3.4.9",
-    "vuetify": "2.3.19",
+    "vuetify": "2.6.4",
     "vuex": "3.6.0",
-    "yargs": "16.1.1"
+    "yargs": "17.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.12.9",
-    "@babel/preset-env": "7.12.7",
+    "@babel/core": "7.17.5",
+    "@babel/preset-env": "7.16.11",
     "@mdi/font": "5.8.55",
-    "@vue/cli-plugin-babel": "4.5.9",
-    "@vue/cli-plugin-eslint": "4.5.9",
+    "@vue/cli-plugin-babel": "~5.0.1",
+    "@vue/cli-plugin-eslint": "~5.0.1",
     "@vue/cli-plugin-unit-jest": "4.5.9",
-    "@vue/cli-service": "4.5.9",
+    "@vue/cli-service": "~5.0.1",
     "@vue/eslint-config-standard": "5.1.2",
     "@vue/test-utils": "1.1.1",
-    "axios-mock-adapter": "1.19.0",
+    "axios-mock-adapter": "1.20.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.6.3",
-    "eslint": "7.14.0",
+    "eslint": "7.32.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-vue": "7.1.0",
     "jest-junit": "12.0.0",
-    "sass": "1.29.0",
+    "sass": "1.49.9",
     "sass-loader": "10.1.0",
-    "vue-cli-plugin-vuetify": "2.0.7",
+    "vue-cli-plugin-vuetify": "2.4.7",
     "vue-jest": "3.0.7",
-    "vue-template-compiler": "2.6.12",
-    "vuetify-loader": "1.6.0",
+    "vue-template-compiler": "2.6.14",
+    "vuetify-loader": "1.7.3",
     "webpack": "4.42.0"
   },
-  "resolutions": {
-    "minimist": "1.2.5",
-    "acorn": "7.1.1"
-  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "not dead"
+  ],
   "jest-junit": {
     "suiteName": "Tests",
     "outputDirectory": "target/surfire-reports",
@@ -54,11 +55,5 @@
     "classNameTemplate": "{classname}",
     "titleTemplate": "{title}",
     "ancestorSeparator": " › "
-  },
-  "browserslist": [
-    "last 1 version",
-    "> 1%",
-    "maintained node versions",
-    "not dead"
-  ]
+  }
 }
